--- a/EthicalBump/index.html
+++ b/EthicalBump/index.html
@@ -26,7 +26,7 @@
         width: 100%;
         height: 100%;
         background-color: rgb(255, 192, 203, 0.5);
-        animation-name: esempio;
+        animation-name: animazione;
         animation-duration: 10s;
         
     }
@@ -37,7 +37,7 @@
     .colorsection1
     {
         background-color: rgb(143, 0, 255);
-        border-top: 3px dotted !important;
+        border-top: 3px solid !important;
         border-color: rgb(255, 192, 203) !important;
     }
     .dimsection2 
@@ -47,7 +47,7 @@
     .colorsection2
     {
         background-color: rgb(0, 127, 255);
-        border-bottom: 3px dotted !important;
+        border-bottom: 3px solid !important;
         border-color: rgb(255, 192, 203) !important;
     }
     .viola
@@ -62,12 +62,12 @@
     }
     .bordo-navbar
     {
-        border-bottom: 3px dotted !important;
+        border-bottom: 2px solid !important;
         border-color: rgb(255, 192, 203) !important;
     }
 
 
-    @keyframes esempio {
+    @keyframes animazione {
     0% {background-color:rgba(0, 0, 0); left:0px; top:0px;}
     30% {background-color:rgb(29, 51, 74, 0.5); left:0px; top:0px;}
     50% {background-color:rgb(143, 0, 255, 0.6); left:50px; top:50px;}
