--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="icon" type="image/png" sizes="18x18" href="logo/aquila.png"> <!-- LOGO -->
+    <link rel="icon" type="image/png" sizes="18x18" href="logo/aquila-white.png"> <!-- FAVICON -->
 
     <title>EthicalBump</title>
     
@@ -42,8 +42,8 @@
         width: 500px;
         height: 500px;
         /*background-color: rgba(255, 255, 255, 0.3);*/
-        background-image: url("sezione1/aquila.png");
-        background-size: 700px 700px;
+        background-image: url("sezione1/img7.png");
+        background-size: 500px 500px;
         /*animation-name: animazione;*/
         animation-duration: 10s;
     }
@@ -100,7 +100,7 @@
     <nav id="nav_bar" class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark bordo-navbar">
         <div class="container-fluid">
           <a class="navbar-brand viola" href="#">
-            <img src="logo/aquila.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+            <img src="logo/aquila-white.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
             EthicalBump
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
