--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <body>
     <!-- ################# NAVBAR ################## -->
 
-    <nav id="nav_bar" class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark bordo-navbar">
+    <nav id="nav_bar" class="navbar navbar-expand-lg fixed-top navbar-dark bordo-navbar">
         <div class="container-fluid">
           <a class="navbar-brand viola" href="#">
             <img src="logo/aquila-white.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
