--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         width: 500px;
         height: 500px;
         /*background-color: rgba(255, 255, 255, 0.3);*/
-        background-image: url("sezione1/img7.png");
+        /*background-image: url("sezione1/img7.png");*/
         background-size: 500px 500px;
         /*animation-name: animazione;*/
         animation-duration: 10s;
