--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 
     .rosed
     {
-        border-radius: 5px;
         background-color: rgb(117, 21, 30)!important;
         font-size: 16px;
     }
@@ -94,6 +93,8 @@
     .rosedin
     {
         color: rgb(255, 255, 255)!important;
+        border-bottom: 1px solid !important;
+        border-radius: 0px 0px 0px 7px;
     }
 
     .rosedin:hover
@@ -108,6 +109,10 @@
         border-color: rgb(255, 192, 203) !important;
     }
 
+    .dropdown:hover>.dropdown-menu 
+    {
+        display: block;
+    }
 
     @keyframes animazione {
     0% {background-color:rgba(0, 0, 0); left:0px; top:0px;}
@@ -137,7 +142,7 @@
                     <a class="nav-link dropdown-toggle rose" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Clothing
                     </a>
-                    <ul class="dropdown-menu  rosed" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item rosedin" href="#">Felpe</a></li>
                       <li><a class="dropdown-item rosedin" href="#">T-Shirts</a></li>
                       <li><a class="dropdown-item rosedin" href="#">Pantaloni</a></li>
