--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <style>
     #nav_bar
     {
-      margin-top: 10px;
-      height: 50px;
+      height: 80px;
     }
     .sezionebenvenuto
     {
-        height: 800px;
+        height: 700px;
         background-image: url("sezione1/img2.png");
         /*filter: blur(10px); 
         -webkit-filter: blur(10px);*/
@@ -133,7 +132,7 @@
             <img src="logo/aquila-white.png" alt="logo" width="70" height="70" class="d-inline-block align-text-center">
             EthicalBump
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler rosed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
