--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
             <img src="logo/aquila-white.png" alt="logo" width="65" height="65" class="d-inline-block align-text-center">
             <img src="sezione1/img3.png" alt="logo" width="90" height="70" class="d-inline-block align-text-center">
           </a>
-          <button class="navbar-toggler rosed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler rosed" type="button" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle rose" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link rose" href="#" id="navbarDropdownMenuLink" role="button"  aria-expanded="false">
                       Clothing
                     </a>
                     <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
@@ -132,7 +132,7 @@
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle rose" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link rose" href="#" id="navbarDropdownMenuLink" role="button" aria-expanded="false">
                       Shoes
                     </a>
                     <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
