--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     }
 
     @keyframes animazione {
-    0% {background-color:rgba(0, 0, 0); left:0px; top:0px;}
-    30% {background-color:rgb(29, 51, 74, 0.5); left:0px; top:0px;}
-    50% {background-color:rgb(143, 0, 255, 0.6); left:50px; top:50px;}
-    70% {background-color:rgb(229, 190, 1, 0.5); left:100px; top:100px;}
-    100% {background-color:rgb(255, 192, 203, 0.6); left:50px; top:50px;}
-}
+        0% {background-color:rgba(0, 0, 0); left:0px; top:0px;}
+        30% {background-color:rgb(29, 51, 74, 0.5); left:0px; top:0px;}
+        50% {background-color:rgb(143, 0, 255, 0.6); left:50px; top:50px;}
+        70% {background-color:rgb(229, 190, 1, 0.5); left:100px; top:100px;}
+        100% {background-color:rgb(255, 192, 203, 0.6); left:50px; top:50px;}
+    }
     </style>
 
   </head>
@@ -116,11 +116,11 @@
             <img src="logo/aquila-white.png" alt="logo" width="65" height="65" class="d-inline-block align-text-center">
             <img src="sezione1/img3.png" alt="logo" width="90" height="70" class="d-inline-block align-text-center">
           </a>
-          <button class="navbar-toggler rosed" type="button" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler rosed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-md-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link rose" href="#" id="navbarDropdownMenuLink" role="button"  aria-expanded="false">
                       Clothing
