--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <div class="row shopsection">
 
-          <div class="col-sm-5" style="width: 20rem;">
+          <div class="col-sm-3">
             <div class="card">
               <div class="card" >
                 <img src="sezione1/img15.png" class="card-img-top" alt="...">
@@ -191,7 +191,7 @@
             </div>
           </div>
 
-          <div class="col-sm-5" style="width: 19rem;">
+          <div class="col-sm-3">
             <div class="card">
               <img src="sezione1/img15.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -210,7 +210,7 @@
             </div>
           </div>
 
-          <div class="col-sm-5" style="width: 19rem;">
+          <div class="col-sm-3">
             <div class="card">
               <img src="sezione1/img15.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -229,7 +229,7 @@
             </div>
           </div>
 
-          <div class="col-sm-5" style="width: 20rem;">
+          <div class="col-sm-3"">
             <div class="card">
               <img src="sezione1/img15.png" class="card-img-top" alt="...">
               <div class="card-body">
