--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         background-size: 2000px 1080px;
         padding-left: 10px !important;
         padding-right: 10px !important;
+        border-radius: 5px 5px 5px 5px;
     }
 
     .dropdown:hover>.dropdown-menu 
