--- a/policyandrefound.html
+++ b/policyandrefound.html
@@ -127,7 +127,7 @@
 
     <nav id="nav_bar" class="navbar navbar-expand-lg fixed-top navbar-dark bordo-navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./index.html">
             <img src="logo/aquila-white.png" alt="logo" width="65" height="65" class="d-inline-block align-text-center">
             <img src="sezione1/img3.png" alt="logo" width="90" height="70" class="d-inline-block align-text-center">
           </a>
