--- a/policyandrefound.html
+++ b/policyandrefound.html
@@ -6,71 +6,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link href="css/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="18x18" href="logo/aquila-white.png"> <!-- FAVICON -->
 
     <title>EthicalBump</title>
     
-    <style>
-    #nav_bar
-    {
-      height: 75px;
-      background-image: url("sezione1/img2.png") !important;
-      background-size: 2000px 1080px;
-    }
-
-    .rose
-    {
-        color: rgb(255, 192, 203)!important;
-        font-size: 16px;
-    }
-
-    .rosed
-    {
-        background-color: rgb(117, 21, 30)!important;
-        font-size: 16px;
-    }
-
-    .rosedin
-    {
-        color: rgb(255, 255, 255)!important;
-        border-bottom: 1px solid !important;
-    }
-
-    .rosedin:hover
-    {
-        color: rgb(255, 192, 203)!important;
-        background-color: rgb(0, 0, 0)!important;
-    }
-    
-    .bordo-navbar
-    {
-        border-bottom: 1px solid !important;
-        border-color: rgb(255, 192, 203) !important;
-    }
-
-    .backgroundlink
-    {
-        background-image: url("sezione1/img2.png") !important;
-        background-size: 2000px 1080px;
-        padding-left: 10px !important;
-        padding-right: 10px !important;
-        border-radius: 5px 5px 5px 5px;
-    }
-
-    .dropdown:hover>.dropdown-menu 
-    {
-        display: block;
-    }
-
-    div.col-sm-3
-    {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    </style>
-
   </head>
   <body>
     <!-- ################# NAVBAR ################## -->
@@ -91,9 +31,9 @@
                       Clothing
                     </a>
                     <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item rosedin" href="#">Felpe</a></li>
-                      <li><a class="dropdown-item rosedin" href="#">T-Shirts</a></li>
-                      <li><a class="dropdown-item rosedin" href="#">Pantaloni</a></li>
+                      <li><a class="dropdown-item rosedin" href="index.html#shop">Felpe</a></li>
+                      <li><a class="dropdown-item rosedin" href="index.html#shop">T-Shirts</a></li>
+                      <li><a class="dropdown-item rosedin" href="index.html#shop">Pantaloni</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -101,9 +41,9 @@
                       Shoes
                     </a>
                     <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item rosedin" href="#">Sneakers</a></li>
-                      <li><a class="dropdown-item rosedin" href="#">Custom Sneakers</a></li>
-                      <li><a class="dropdown-item rosedin" href="#">Sales Sneakers</a></li>
+                      <li><a class="dropdown-item rosedin" href="index.html#shop">Sneakers</a></li>
+                      <li><a class="dropdown-item rosedin" href="index.html#shop">Custom Sneakers</a></li>
+                      <li><a class="dropdown-item rosedin" href="index.html#shop">Sales Sneakers</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
