--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="logo/aquila-white.png" alt="logo" width="65" height="65" class="d-inline-block align-text-center">
             <img src="sezione1/img3.png" alt="logo" width="90" height="70" class="d-inline-block align-text-center">
           </a>
-          <button class="navbar-toggler rosed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button id="btnnavbar" class="navbar-toggler rosed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse backgroundlink" id="navbarNavDropdown">
@@ -31,9 +31,9 @@
                       Clothing
                     </a>
                     <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item rosedin" href="#shop">Felpe</a></li>
-                      <li><a class="dropdown-item rosedin" href="#shop">T-Shirts</a></li>
-                      <li><a class="dropdown-item rosedin" href="#shop">Pantaloni</a></li>
+                      <li><a onclick="chiusuranav()" class="dropdown-item rosedin" href="#shop">Felpe</a></li>
+                      <li><a onclick="chiusuranav()" class="dropdown-item rosedin" href="#shop">T-Shirts</a></li>
+                      <li><a onclick="chiusuranav()" class="dropdown-item rosedin" href="#shop">Pantaloni</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -41,9 +41,9 @@
                       Shoes
                     </a>
                     <ul class="dropdown-menu rosed" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item rosedin" href="#shop">Sneakers</a></li>
-                      <li><a class="dropdown-item rosedin" href="#shop">Custom Sneakers</a></li>
-                      <li><a class="dropdown-item rosedin" href="#shop">Sales Sneakers</a></li>
+                      <li><a onclick="chiusuranav()" class="dropdown-item rosedin" href="#shop">Sneakers</a></li>
+                      <li><a onclick="chiusuranav()" class="dropdown-item rosedin" href="#shop">Custom Sneakers</a></li>
+                      <li><a onclick="chiusuranav()" class="dropdown-item rosedin" href="#shop">Sales Sneakers</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
